--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas 
-requests
-scikit-learn
-streamlit-option-menu
+streamlit==1.20.0
+pandas==1.4.0
+requests==2.27.1
+scikit-learn==1.0.2
+streamlit-option-menu==0.3.2
